--- a/facility-booking/package.json
+++ b/facility-booking/package.json
@@ -10,21 +10,23 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.8",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
+    "negotiator": "^1.0.0",
     "next": "^14.0.0",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.0.0",
-    "typescript": "^5.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
