--- a/facility-booking/package.json
+++ b/facility-booking/package.json
@@ -23,12 +23,14 @@
     "next": "^14.0.0",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
