--- a/facility-booking/package.json
+++ b/facility-booking/package.json
@@ -16,13 +16,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.0",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "faker": "^6.6.6",
     "lucide-react": "^0.263.1",
     "negotiator": "^1.0.0",
     "next": "^14.0.0",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^2.0.0",
@@ -30,6 +33,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@types/react-datepicker": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
