--- a/facility-booking/package.json
+++ b/facility-booking/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.8",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
